--- a/src/components/Card.module.css
+++ b/src/components/Card.module.css
@@ -17,7 +17,7 @@
     border: 2px solid red;
     margin: auto;
     padding: 1.5rem;
-
+    border-radius: 30px;
 }
 
 .card_div_time{
@@ -25,8 +25,37 @@
     flex: row;
     font-size: 30px;
     padding: 0.5rem;
+    justify-content: flex-start;
+    gap: 0.8rem;
+    letter-spacing: 1px;
+    font-weight: 700;
 }
 
 .question{
     text-align: center;
+}
+
+.time{
+    text-align: center;
+}
+
+.time_p{
+    font-size: 2rem;
+    font-weight: 40px;
+}
+
+.tag_div{
+    display: flex;
+    justify-content: flex-start;
+    gap: 2rem;
+    font-size: 20px;
+    padding: 0.4rem;
+}
+
+.tags{
+    border-radius: 0.5rem;
+    padding: 0.6rem;
+    background-color: #2E4B90;
+    color: #FFFFFF;
+    font-weight: 700;
 }
